@@ -6,20 +6,18 @@ import java.lang.Integer;
 
 public class Main {
     public static void main(String[] args) {
-        if(args[0] != null) {
-            System.out.println(args[0]);
-        }
         System.out.format("Hello %s %s !%n", Jigsaw.name(), Jigsaw.details());
-        Integer seven = new Integer(7);
-        for(Integer i = 0; i<10;i++) {
+        if(args.length == 0) {
+            System.out.println("   |--- Add an argument to initialize the counter ! Try 20");
+            return;
+        }
+        Integer starter = Integer.valueOf(args[0]);
+        for(Integer i = starter; i<100;i++) {
             System.out.println(i);
             try {
-                Thread.sleep(1000l);
+                Thread.sleep(250l);
             } catch (InterruptedException e) {
                 e.printStackTrace();
-            }
-            if(i.equals(seven)){
-                break;
             }
         }
     }
